fix: header z-index and product slider active class

--- a/dev/sass/product-slider.scss
+++ b/dev/sass/product-slider.scss
@@ -5,6 +5,11 @@
     margin: 0 auto;
 }
 
+
+.swiper-slide-active .product {
+    border-color: $secondary-color;
+}
+
 .product {
     border: 1px solid #D9D9D9;
     border-radius: 28px;
@@ -74,3 +79,4 @@
         transform: rotate(-90deg);
     }
 }
+
